--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-navigation-header-buttons": "^4.0.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "ts-node": "^8.10.2",
     "typesafe-actions": "^5.1.0",
